# neko-ng

./: .gitattributes  .gitignore  BUILD.gn  LICENSE.md  README.md  clang_format.sh  neko-ng.iss
assets/: Neko98.txt  Readme.txt
assets/catsound/: Sound.txt
assets/images/: Credits.txt
src/: AlwaysOnTopPet.cpp  AlwaysOnTopPet.h  BUILD.gn  DesktopHack.cpp  DesktopHack.h  DesktopPet.cpp  DesktopPet.h  Neko.cpp  Neko.h  Neko95.rc  Neko98.cpp  Neko98.h  NekoCommon.h  NekoSettings.cpp  NekoSettings.h  Pet.cpp  Pet.h  Tray.cpp  Tray.h  framework.h  resource.h  version.h
src/NekoCFG/: BUILD.gn  NekoCFG.cpp  NekoCFG.h  NekoCFG.rc  NekoCFG_Tabs.cpp  NekoCFG_resource.h
src/NekoCFG/res/: neko_cfg.manifest
src/NekoHelp/: Neko98.CNT  Neko98.HPJ
src/res/: neko_win32.manifest
